Set the text fields font size based on their height - right now we're using the font size from the pdf itself but we use an other font   in the annotation layer. So this size doesn't really make sense and leads to bad   rendering (see pdf in #14928); - use a sans-serif font for the fields containing text (fix issue #14736); - remove useless padding in text-based fields (fix issue #14301); - text fields allow/disallow scrolling bars (see bit 24 in Ff entry), so use this   value to hide/show scrollbars in annotation layer.

--- a/web/annotation_layer_builder.css
+++ b/web/annotation_layer_builder.css
@@ -59,10 +59,9 @@
   background-image: var(--annotation-unfocused-field-background);
   border: 1px solid transparent;
   box-sizing: border-box;
-  font-size: 9px;
+  font: 9px sans-serif;
   height: 100%;
   margin: 0;
-  padding: 0 3px;
   vertical-align: top;
   width: 100%;
 }
@@ -76,8 +75,6 @@
 }
 
 .annotationLayer .textWidgetAnnotation textarea {
-  font: message-box;
-  font-size: 9px;
   resize: none;
 }
 
@@ -167,7 +164,6 @@
 .annotationLayer .buttonWidgetAnnotation.checkBox input,
 .annotationLayer .buttonWidgetAnnotation.radioButton input {
   appearance: none;
-  padding: 0;
 }
 
 .annotationLayer .popupWrapper {
